Changed jsc shell timeout mechanism to leverage the VMTraps and use CPUTime. https://bugs.webkit.org/show_bug.cgi?id=205279 <rdar://problem/57971874>

Reviewed by Saam Barati.

This fixes all the timeouts that occur due to CPU time starvation when
running JSC tests on a debug build.

What this means is that the timeout mechanism may trigger asynchronous
OSR exits.  If a test requires no OSR exits, that test should
requireOption("--usePollingTraps=true") so that the VMTraps will use its
polling implementation instead.

I've tested this with a full run of the JSC stress tests with a debug
build and saw 0 timeouts.  I've also tested it with a contrived tests that
loops forever, and saw the expected timeout crash.

Will look into re-tuning needed timeout value (and other JSC tests timeout
cleanup) in https://bugs.webkit.org/show_bug.cgi?id=205298.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::executeProgram):
(JSC::Interpreter::executeCall):
(JSC::Interpreter::executeConstruct):
(JSC::Interpreter::execute):
(JSC::Interpreter::executeModuleProgram):
* interpreter/InterpreterInlines.h:
(JSC::Interpreter::execute):
* jsc.cpp:
(timeoutCheckCallback):
(initializeTimeoutIfNeeded):
(startTimeoutThreadIfNeeded):
(runJSC):
(jscmain):
* runtime/JSCConfig.h:
* runtime/VM.h:
(JSC::VM::notifyNeedShellTimeoutCheck):
* runtime/VMTraps.cpp:
(JSC::VMTraps::handleTraps):
* runtime/VMTraps.h:
(JSC::VMTraps::Mask::Mask):
(JSC::VMTraps::Mask::allEventTypes):
(JSC::VMTraps::Mask::init):
(JSC::VMTraps::interruptingTraps):
* tools/VMInspector.cpp:
(JSC::VMInspector::forEachVM):
* tools/VMInspector.h:



Canonical link: https://commits.webkit.org/218494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253581 268f45cc-cd09-0410-ab3c-d52691b4dbfc