Source/JavaScriptCore/runtime/JSCConfig.h
@@ -32,6 +32,7 @@ namespace JSC {
 
 class ExecutableAllocator;
 class FixedVMPoolExecutableAllocator;
+class VM;
 
 #if CPU(ARM64) || PLATFORM(WATCHOS)
 constexpr size_t PageSize = 16 * KB;
@@ -82,6 +83,8 @@ struct Config {
 #endif
 
             OptionsStorage options;
+
+            void (*shellTimeoutCheckCallback)(VM&);
         };
         char ensureSize[ConfigSizeToProtect];
     };
