Source/JavaScriptCore/runtime/VMTraps.cpp
@@ -357,12 +357,17 @@ void VMTraps::handleTraps(JSGlobalObject* globalObject, CallFrame* callFrame, VM
             dataLog("VM ", RawPointer(&vm), " on pid ", getCurrentProcessID(), " received NeedDebuggerBreak trap\n");
             invalidateCodeBlocksOnStack(callFrame);
             break;
-                
+
         case NeedWatchdogCheck:
             ASSERT(vm.watchdog());
             if (LIKELY(!vm.watchdog()->shouldTerminate(globalObject)))
                 continue;
             FALLTHROUGH;
+
+        case NeedShellTimeoutCheck:
+            RELEASE_ASSERT(g_jscConfig.shellTimeoutCheckCallback);
+            g_jscConfig.shellTimeoutCheckCallback(vm);
+            break;
 
         case NeedTermination:
             throwException(globalObject, scope, createTerminatedExecutionException(&vm));
