Source/JavaScriptCore/runtime/VMTraps.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017 Apple Inc. All rights reserved.
+ * Copyright (C) 2017-2019 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -52,6 +52,7 @@ public:
     enum EventType {
         // Sorted in servicing priority order from highest to lowest.
         NeedDebuggerBreak,
+        NeedShellTimeoutCheck,
         NeedTermination,
         NeedWatchdogCheck,
         NumberOfEventTypes, // This entry must be last in this list.
@@ -61,13 +62,16 @@ public:
     class Mask {
     public:
         enum AllEventTypes { AllEventTypesTag };
-        Mask(AllEventTypes)
+        constexpr Mask(AllEventTypes)
             : m_mask(std::numeric_limits<BitField>::max())
         { }
-        static Mask allEventTypes() { return Mask(AllEventTypesTag); }
+        static constexpr Mask allEventTypes() { return Mask(AllEventTypesTag); }
+
+        constexpr Mask(const Mask&) = default;
+        constexpr Mask(Mask&&) = default;
 
         template<typename... Arguments>
-        Mask(Arguments... args)
+        constexpr Mask(Arguments... args)
             : m_mask(0)
         {
             init(args...);
@@ -77,17 +81,19 @@ public:
 
     private:
         template<typename... Arguments>
-        void init(EventType eventType, Arguments... args)
+        constexpr void init(EventType eventType, Arguments... args)
         {
             ASSERT(eventType < NumberOfEventTypes);
             m_mask |= (1 << eventType);
             init(args...);
         }
 
-        void init() { }
+        constexpr void init() { }
 
         BitField m_mask;
     };
+
+    static constexpr Mask interruptingTraps() { return Mask(NeedShellTimeoutCheck, NeedTermination, NeedWatchdogCheck); }
 
     ~VMTraps();
     VMTraps();
